--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-  "cSpell.words": ["astro", "datetime", "hotspot", "Marozzi", "oous", "portabletext"],
+  "cSpell.words": [
+    "astro",
+    "codegen",
+    "datetime",
+    "hotspot",
+    "Marozzi",
+    "oous",
+    "portabletext"
+  ],
   "prettier.documentSelectors": ["**/*.astro"],
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
