--- a/blog/package.json
+++ b/blog/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^18.2.7",
     "astro": "^2.10.14",
     "astro-portabletext": "^0.9.4",
+    "astro-robots-txt": "^0.5.0",
+    "astro-sitemap": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.15.1"
