--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,22 +5,22 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js 18.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18.x
-        cache: 'npm'
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: "npm"
 
-    - run: npm run format:check
-    - run: npm run lint
-    
-    - run: npm -w studio run generate:check
-    
-    - run: npm -w studio run deploy
+      - run: npm run format:check
+      - run: npm run lint
+
+      - run: npm -w studio run generate:check
+
+      - run: npm -w studio run deploy
