--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +18,10 @@ jobs:
           node-version: 18.x
           cache: "npm"
 
+      - run: npm run install
+
       - run: npm run format:check
+
       - run: npm run lint
 
       - run: npm -w studio run generate:check
