--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18.x
           cache: "npm"
 
-      - run: npm run install
+      - run: npm install
 
       - run: npm run format:check
 
