--- a/studio/package.json
+++ b/studio/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "sanity dev",
     "build": "sanity build",
+    "lint": "tsc",
+    "format": "prettier --write .",
     "preview": "sanity start",
     "generate": "npx sanity-codegen",
     "generate:check": "npm run generate && git update-index --refresh",
@@ -27,7 +29,9 @@
   "devDependencies": {
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
-    "sanity-codegen": "^0.9.8"
+    "prettier": "^3.0.2",
+    "sanity-codegen": "^0.9.8",
+    "typescript": "^5.2.2"
   },
   "prettier": {
     "printWidth": 90
