--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "hotspot",
     "Marozzi",
     "oous",
-    "portabletext"
+    "portabletext",
+    "tailwindcss"
   ],
   "prettier.documentSelectors": ["**/*.astro"],
   "[astro]": {
