--- a/blog/package.json
+++ b/blog/package.json
@@ -11,21 +11,27 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.7",
+    "@portabletext/react": "^3.0.7",
+    "@sanity/client": "^6.4.9",
+    "@sanity/image-url": "^1.0.2",
+    "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prettier": "^3.0.2",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "8.4.28",
+    "@portabletext/types": "^2.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15"
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "8.4.28",
+    "prettier": "^3.0.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "prettier": {
     "printWidth": 90
