--- a/blog/package.json
+++ b/blog/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.0",
     "@portabletext/types": "^2.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
