--- a/blog/package.json
+++ b/blog/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sanity-codegen": "^0.9.8"
   },
   "devDependencies": {
     "@portabletext/types": "^2.0.6",
