--- a/blog/package.json
+++ b/blog/package.json
@@ -18,8 +18,7 @@
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sanity-codegen": "^0.9.8"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@portabletext/types": "^2.0.6",
@@ -30,11 +29,13 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "postcss": "8.4.28",
-    "prettier": "^3.0.2",
+    "sanity-codegen": "^0.9.8",
     "tailwindcss": "3.3.3",
+    "prettier": "^2.8.8",
     "typescript": "5.2.2"
   },
   "prettier": {
-    "printWidth": 90
+    "printWidth": 90,
+    "trailingComma": "all"
   }
 }
