--- a/studio/package.json
+++ b/studio/package.json
@@ -30,11 +30,12 @@
   "devDependencies": {
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
-    "prettier": "^3.0.2",
+    "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
     "typescript": "^5.2.2"
   },
   "prettier": {
-    "printWidth": 90
+    "printWidth": 90,
+    "trailingComma": "all"
   }
 }
