--- a/blog/package.json
+++ b/blog/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.0",
     "@portabletext/types": "^2.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -29,9 +30,9 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "postcss": "8.4.28",
+    "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
     "tailwindcss": "3.3.3",
-    "prettier": "^2.8.8",
     "typescript": "5.2.2"
   },
   "prettier": {
