--- a/blog/.vscode/settings.json
+++ b/blog/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["nextui", "oous", "portabletext", "tailwindcss"]
+  "cSpell.words": ["codegen", "nextui", "oous", "portabletext", "tailwindcss"]
 }
