--- a/blog/package.json
+++ b/blog/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:types": "tsc",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -21,7 +22,6 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.6.0",
     "@portabletext/types": "^2.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
