--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,7 @@ jobs:
 
       - run: cd blog && npm run lint
 
+      - run: cd blog && npm run build
+
       - name: Deploy
         run: curl -X POST "https://api.cloudflare.com/client/v4/pages/webhooks/deploy_hooks/${{ secrets.CLOUDFLARE_DEPLOY_HOOK_ID }}"
