--- a/blog/package.json
+++ b/blog/package.json
@@ -16,6 +16,7 @@
     "@portabletext/react": "^3.0.7",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "react": "18.2.0",
