--- a/blog/package.json
+++ b/blog/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,13 +12,14 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@nextui-org/react": "^2.1.7",
+    "@nextui-org/react": "^2.2.9",
     "@portabletext/react": "^3.0.7",
+    "@react-stately/data": "^3.11.0",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.1",
-    "next": "13.4.19",
+    "next": "^14.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
