--- a/blog/package.json
+++ b/blog/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4100",
     "lint": "next lint",
     "lint:types": "tsc",
     "format": "prettier --write .",
