--- a/blog/.eslintrc.json
+++ b/blog/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "plugin:next-on-pages/recommended"],
+  "plugins": ["next-on-pages"],
   "rules": {
     "no-unused-vars": "warn"
   }
