--- a/blog/package.json
+++ b/blog/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
+    "pages": "npx @cloudflare/next-on-pages",
+    "pages:watch": "npx @cloudflare/next-on-pages --watch",
+    "pages:preview": "npx wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat",
     "start": "next start -p 4100",
     "lint": "next lint",
     "lint:types": "tsc",
@@ -31,6 +34,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "eslint-plugin-next-on-pages": "^1.7.3",
     "postcss": "8.4.28",
     "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
