--- a/studio/package.json
+++ b/studio/package.json
@@ -20,22 +20,21 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.8.3",
+    "@sanity/vision": "^3.19.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.8.3",
-    "styled-components": "^5.3.9"
+    "sanity": "^3.19.3",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.25",
-    "@types/styled-components": "^5.1.26",
-    "prettier": "^2.8.8",
+    "@types/react": "^18.2.37",
+    "@types/styled-components": "^5.1.30",
+    "prettier": "^3.1.0",
     "sanity-codegen": "^0.9.8",
     "typescript": "^5.2.2"
   },
   "prettier": {
-    "printWidth": 90,
-    "trailingComma": "all"
+    "printWidth": 90
   }
 }
