--- a/blog/package.json
+++ b/blog/package.json
@@ -36,12 +36,13 @@
     "eslint-config-next": "^14.0.2",
     "eslint-plugin-next-on-pages": "^1.7.3",
     "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
+    "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   },
   "prettier": {
-    "printWidth": 90
+    "printWidth": 90,
+    "trailingComma": "all"
   }
 }
