--- a/blog/package.json
+++ b/blog/package.json
@@ -21,6 +21,7 @@
     "@sanity/client": "^6.8.6",
     "@sanity/image-url": "^1.0.2",
     "date-fns": "^2.30.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.5",
     "next": "^14.0.2",
     "react": "^18.2.0",
