--- a/blog/package.json
+++ b/blog/package.json
@@ -15,32 +15,33 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/react": "^2.2.10",
     "@portabletext/react": "^3.0.11",
-    "@react-stately/data": "^3.11.0",
-    "@sanity/client": "^6.8.6",
+    "@react-stately/data": "^3.11.2",
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/client": "^6.15.5",
     "@sanity/image-url": "^1.0.2",
-    "date-fns": "^2.30.0",
-    "firebase": "^10.7.1",
-    "framer-motion": "^10.16.5",
-    "next": "^14.0.2",
+    "date-fns": "^3.5.0",
+    "firebase": "^10.9.0",
+    "framer-motion": "^11.0.14",
+    "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@portabletext/types": "^2.0.8",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "^14.0.2",
-    "eslint-plugin-next-on-pages": "^1.7.3",
-    "postcss": "^8.4.31",
-    "prettier": "^2.8.8",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "eslint-plugin-next-on-pages": "^1.10.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "sanity-codegen": "^0.9.8",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   },
   "prettier": {
     "printWidth": 90,
