--- a/blog/package.json
+++ b/blog/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.0.14",
     "next": "^14.1.3",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-next-on-pages": "^1.10.0",
     "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
+    "prettier": "^2.8.8",
     "sanity-codegen": "^0.9.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
